--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
   <h1>レジメニュー</h1>
   <div class="wrap">
     <div class="card">
-      <div class="title">入場料レジ（入場料 / グッズ / お散歩ダイナソー）</div>
-      <div class="desc">現金のみ。返金あり。オフライン中は保存、オンライン復帰で自動送信。</div>
-      <a class="btn" href="./entry.html">入場料レジを開く</a>
+      <div class="title">恐竜レジ（入場料 / グッズ / お散歩ダイナソー）</div>
+      <div class="desc">初回は端末名を恐竜+責任者名としてください</div>
+      <a class="btn" href="./entry.html">恐竜レジを開く</a>
     </div>
 
     <div class="card">
       <div class="title">ふわふわ時間制レジ（10分/30分）</div>
-      <div class="desc">10分500円 / 30分1000円。返金あり。オフライン対応＆自動送信。</div>
+      <div class="desc">初回は端末名をふわふわ+責任者名としてください</div>
       <a class="btn" href="./fuwafuwa.html">ふわふわレジを開く</a>
     </div>
 
@@ -65,4 +65,5 @@
   </script>
 </body>
 </html>
+
 
