--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
   <div class="wrap">
     <div class="card">
       <div class="title">恐竜レジ（入場料 / グッズ / お散歩ダイナソー）</div>
-      <div class="desc">初回は端末名を恐竜+責任者名としてください</div>
+      <div class="desc">初回は端末名を　恐竜+責任者名　としてください</div>
       <a class="btn" href="./entry.html">恐竜レジを開く</a>
     </div>
 
     <div class="card">
-      <div class="title">ふわふわ時間制レジ（10分/30分）</div>
-      <div class="desc">初回は端末名をふわふわ+責任者名としてください</div>
+      <div class="title">ふわふわレジ（10分/30分）</div>
+      <div class="desc">初回は端末名を　ふわふわ+責任者名　としてください</div>
       <a class="btn" href="./fuwafuwa.html">ふわふわレジを開く</a>
     </div>
 
@@ -65,5 +65,6 @@
   </script>
 </body>
 </html>
+
 
 
