--- a/entry.html
+++ b/entry.html
@@ -64,12 +64,13 @@
       touch-action:manipulation;
     }
 
-    .sale{
-      background:#1e88e5;
-      color:#fff;
-      font-size:20px;
-      padding:14px 10px;
-    }
+   .sale{
+  background:#1e88e5;
+  color:#fff;
+  font-size:30px;
+  padding:26px 10px;
+  border-radius:16px;
+}
 
     .refund{
       background:#e53935;
