--- a/entry.html
+++ b/entry.html
@@ -161,7 +161,7 @@
 <a class="back" href="./index.html">← メニューに戻る</a>
 
 <div class="app">
-  <h1>恐竜料レジ</h1>
+  <h1>恐竜レジ</h1>
   <div id="deviceLabel">端末：—</div>
 
   <div class="scroll">
